[fixed] overflow css

--- a/src/features/StartPage/StartPage.module.css
+++ b/src/features/StartPage/StartPage.module.css
@@ -33,11 +33,11 @@
 .button {
   font-family: CastlemarRegular, serif;
   appearance: none;
-  font-size: 132px;
+  font-size: 13vw;
   padding-left: 12px;
   padding-right: 12px;
   outline: none;
-  border: 5px solid #4B4137;
+  border: 3px solid #4B4137;
   border-radius: 50%;
   color: #4B4137;
   padding-bottom: 4px;
